syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.proto";
option java_outer_classname = "BlockchainProto";

package proto;

// Block is passed when new block was broadcasted to network
message Block {
  int64 index = 1;
  int64 timestamp = 2;
  string hash = 3;
  string prevHash = 4;
  string data = 5;
}

service Blockchain {
	rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
	rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse) {}
}

message AddBlockRequest {
	string data = 1;
}

message AddBlockResponse {}

message GetBlockchainRequest {}

message GetBlockchainResponse {
	repeated Block blocks = 1;
}
